--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@ gen/
 out/
 
 # Gradle files
-.gradle/
-build/
+**/.gradle/
+**/build/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -39,6 +39,7 @@ captures/
 .idea/gradle.xml
 .idea/dictionaries
 .idea/libraries
+**/.idea/*
 
 # Keystore files
 *.jks
