--- a/xamarin/RemoteTouch/RemoteTouch/RemoteTouch.iOS/packages.config
+++ b/xamarin/RemoteTouch/RemoteTouch/RemoteTouch.iOS/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Plugin.Contacts.Extensions" version="1.0.0" targetFramework="xamarinios10" />
+  <package id="Xam.Plugins.Bluetooth" version="1.0.0" targetFramework="xamarinios10" />
+  <package id="Xam.Plugins.Notifier" version="2.1.0" targetFramework="xamarinios10" />
+  <package id="Xam.Plugins.Settings" version="3.0.1" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="xamarinios10" />
 </packages>
