--- a/xamarin/RemoteTouch/RemoteTouch/RemoteTouch.Android/Properties/AndroidManifest.xml
+++ b/xamarin/RemoteTouch/RemoteTouch/RemoteTouch.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="14" />
-	<application android:label="RemoteTouch.Android"></application>
+  <uses-sdk android:minSdkVersion="14" />
+  <uses-permission android:name="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" />
+  <application android:label="RemoteTouch.Android">
+    <service android:name=".NotificationHandler"
+                 android:label="@string/AppName"
+                 android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+      <intent-filter>
+        <action android:name="android.service.notification.NotificationListenerService" />
+      </intent-filter>
+    </service>
+  </application>
 </manifest>
