--- a/xamarin/RemoteTouch/RemoteTouch/RemoteTouch.Android/packages.config
+++ b/xamarin/RemoteTouch/RemoteTouch/RemoteTouch.Android/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Plugin.Contacts.Extensions" version="1.0.0" targetFramework="monoandroid71" />
+  <package id="Xam.Plugins.Notifier" version="2.1.0" targetFramework="monoandroid71" />
+  <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Arch.Core.Common" version="1.0.0" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.0.1" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.0.0" targetFramework="monoandroid80" />
