--- a/android/RemoteTouch/app/src/main/AndroidManifest.xml
+++ b/android/RemoteTouch/app/src/main/AndroidManifest.xml
@@ -14,14 +14,14 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/Application.Name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:label="@string/Application.Name"
             android:theme="@style/AppTheme.NoActionBar">
 
             <intent-filter>
@@ -34,7 +34,7 @@
 
         <service
             android:name=".NotificationHandler"
-            android:label="@string/app_name"
+            android:label="@string/Application.Name"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
 
             <intent-filter>
