--- a/android/RemoteTouch/app/src/main/AndroidManifest.xml
+++ b/android/RemoteTouch/app/src/main/AndroidManifest.xml
@@ -33,8 +33,8 @@
         </activity>
 
         <service
-            android:name=".NotificationHandler"
-            android:label="@string/Application.Name"
+            android:name=".NotificationAccessService"
+            android:label="@string/NotificationAccessService.Label"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
 
             <intent-filter>
