--- a/android/RemoteTouch/app/build.gradle
+++ b/android/RemoteTouch/app/build.gradle
@@ -40,5 +40,8 @@ dependencies {
     compile('com.google.http-client:google-http-client-gson:1.23.0') {
         exclude group: 'com.google.code.findbugs'
     }
+    compile 'com.google.firebase:firebase-messaging:11.8.0'
     testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'com.google.gms.google-services'
