--- a/android/RemoteTouch/app/src/main/AndroidManifest.xml
+++ b/android/RemoteTouch/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
 
         <service
             android:name=".NotificationAccessService"
-            android:label="@string/NotificationAccessService.Label"
+            android:label="@string/Application.Name"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
 
             <intent-filter>
