--- a/android/RemoteTouch/app/src/main/AndroidManifest.xml
+++ b/android/RemoteTouch/app/src/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
         <service
             android:name=".service.NotificationAccessService"
             android:label="@string/NotificationAccessService.Label"
-            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.service.notification.NotificationListenerService"/>
