--- a/android/RemoteTouch/app/src/main/AndroidManifest.xml
+++ b/android/RemoteTouch/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="cz.zelenikr.remotetouch"
+<manifest package="cz.zelenikr.remotetouch"
+          xmlns:android="http://schemas.android.com/apk/res/android"
           android:versionCode="1"
           android:versionName="1.0">
 
@@ -8,14 +8,18 @@
         android:minSdkVersion="18"
         android:targetSdkVersion="26"/>
 
+    <!--NETWORK PERMISSIONS-->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <!--SMS PERMISSIONS-->
     <uses-permission android:name="android.permission.READ_SMS"/>
     <uses-permission android:name="android.permission.RECEIVE_SMS"/>
     <uses-permission android:name="android.permission.SEND_SMS"/>
     <!--<uses-permission android:name="android.permission.RECEIVE_MMS"/>-->
 
+    <!--CALLING PERMISSIONS-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.READ_CALL_LOG"/>
 
     <application
@@ -36,8 +40,16 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-
         </activity>
+
+        <receiver
+            android:name=".receiver.PhoneStateReceiver"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intent.action.PHONE_STATE"/>
+            </intent-filter>
+        </receiver>
 
         <receiver
             android:name=".receiver.SmsReceiver"
@@ -46,7 +58,6 @@
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
             </intent-filter>
-
         </receiver>
 
         <service
@@ -63,7 +74,6 @@
             <intent-filter>
                 <action android:name="android.service.notification.NotificationListenerService"/>
             </intent-filter>
-
         </service>
 
     </application>
