--- a/android/RemoteTouch/app/build.gradle
+++ b/android/RemoteTouch/app/build.gradle
@@ -20,6 +20,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:support-v4:26.1.0'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -28,9 +29,15 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:support-core-utils:26.1.0'
+    compile 'com.android.support:preference-v7:26.1.0'
+    compile 'com.android.support:preference-v14:26.1.0'
     // https://mvnrepository.com/artifact/com.google.http-client/google-http-client-android
-    compile ('com.google.http-client:google-http-client-android:1.23.0') {exclude group: 'com.google.code.findbugs'}
+    compile('com.google.http-client:google-http-client-android:1.23.0') {
+        exclude group: 'com.google.code.findbugs'
+    }
     // https://mvnrepository.com/artifact/com.google.http-client/google-http-client-gson
-    compile ('com.google.http-client:google-http-client-gson:1.23.0') {exclude group: 'com.google.code.findbugs'}
+    compile('com.google.http-client:google-http-client-gson:1.23.0') {
+        exclude group: 'com.google.code.findbugs'
+    }
     testCompile 'junit:junit:4.12'
 }
