--- a/android/RemoteTouch/app/src/main/AndroidManifest.xml
+++ b/android/RemoteTouch/app/src/main/AndroidManifest.xml
@@ -76,7 +76,8 @@
 
         <receiver
             android:name=".receiver.SmsReceiver"
-            android:exported="true">
+            android:exported="true"
+            android:enabled="false">
 
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
