--- a/android/RemoteTouch/app/build.gradle
+++ b/android/RemoteTouch/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.3"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "cz.zelenikr.remotetouch"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -17,31 +17,33 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    implementation 'com.android.support:support-v4:26.1.0'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation 'com.android.support:support-v4:27.1.0'
+    implementation 'com.android.support:recyclerview-v7:27.1.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support:support-core-utils:26.1.0'
-    compile 'com.android.support:preference-v7:26.1.0'
-    compile 'com.android.support:preference-v14:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support:support-core-utils:27.1.0'
+    implementation 'com.android.support:preference-v7:27.1.0'
+    implementation 'com.android.support:preference-v14:27.1.0'
     // https://mvnrepository.com/artifact/com.google.http-client/google-http-client-android
-    compile('com.google.http-client:google-http-client-android:1.23.0') {
+    implementation('com.google.http-client:google-http-client-android:1.23.0') {
         exclude group: 'com.google.code.findbugs'
     }
     // https://mvnrepository.com/artifact/com.google.http-client/google-http-client-gson
-    compile('com.google.http-client:google-http-client-gson:1.23.0') {
+    implementation('com.google.http-client:google-http-client-gson:1.23.0') {
         exclude group: 'com.google.code.findbugs'
     }
-    compile 'com.google.firebase:firebase-messaging:11.8.0'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.google.firebase:firebase-messaging:12.0.1'
+    testImplementation 'junit:junit:4.12'
 }
 
 apply plugin: 'com.google.gms.google-services'
