--- a/android/RemoteTouch/app/build.gradle
+++ b/android/RemoteTouch/app/build.gradle
@@ -22,18 +22,23 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:support-v4:27.1.0'
-    implementation 'com.android.support:recyclerview-v7:27.1.0'
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+   implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+//    Android
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:support-v4:27.1.0'
+    implementation 'com.android.support:recyclerview-v7:27.1.0'
     implementation 'com.android.support:design:27.1.0'
     implementation 'com.android.support:support-core-utils:27.1.0'
+    implementation 'com.android.support:percent:27.1.0'
     implementation 'com.android.support:preference-v7:27.1.0'
     implementation 'com.android.support:preference-v14:27.1.0'
+
+//    Google
     // https://mvnrepository.com/artifact/com.google.http-client/google-http-client-android
     implementation('com.google.http-client:google-http-client-android:1.23.0') {
         exclude group: 'com.google.code.findbugs'
@@ -43,6 +48,10 @@ dependencies {
         exclude group: 'com.google.code.findbugs'
     }
     implementation 'com.google.firebase:firebase-messaging:12.0.1'
+
+//    Other
+    implementation 'me.itangqi.waveloadingview:library:0.3.5'
+
     testImplementation 'junit:junit:4.12'
 }
 
