--- a/android/RemoteTouch/app/src/main/AndroidManifest.xml
+++ b/android/RemoteTouch/app/src/main/AndroidManifest.xml
@@ -85,7 +85,8 @@
         <service
             android:name=".service.ServerCmdSenderService"
             android:enabled="true"
-            android:exported="false"/>
+            android:exported="false"
+            android:permission="android.permission.BIND_JOB_SERVICE"/>
 
         <service
             android:name=".service.MessageSenderService"
