--- a/android/RemoteTouch/app/src/main/AndroidManifest.xml
+++ b/android/RemoteTouch/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
           xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
           android:versionCode="1"
-          android:versionName="0.18.5.22">
+          android:versionName="0.18.5.23">
 
     <uses-sdk
         android:minSdkVersion="18"
@@ -43,6 +43,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data android:name="firebase_analytics_collection_deactivated" android:value="true" />
 
         <activity
             android:name=".NavigationActivity"
