--- a/android/RemoteTouch/app/build.gradle
+++ b/android/RemoteTouch/app/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "cz.zelenikr.remotetouch"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        minSdkVersion 18
+        targetSdkVersion 28
     }
     buildTypes {
         release {
@@ -30,13 +32,13 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //    Android
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:support-core-utils:27.1.1'
-    implementation 'com.android.support:percent:27.1.1'
-    implementation 'com.android.support:preference-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:support-core-utils:28.0.0'
+    implementation 'com.android.support:percent:28.0.0'
+    implementation 'com.android.support:preference-v7:28.0.0'
     //    Google
     // https://mvnrepository.com/artifact/com.google.http-client/google-http-client-android
     implementation('com.google.http-client:google-http-client-android:1.23.0') {
@@ -46,7 +48,7 @@ dependencies {
     implementation('com.google.http-client:google-http-client-gson:1.23.0') {
         exclude group: 'com.google.code.findbugs'
     }
-    implementation 'com.google.firebase:firebase-messaging:15.0.2'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
     //    Other
     implementation 'me.itangqi.waveloadingview:library:0.3.5'
     implementation 'com.github.medyo:android-about-page:1.2.4'
