--- a/android/RemoteTouch/app/src/main/AndroidManifest.xml
+++ b/android/RemoteTouch/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest package="cz.zelenikr.remotetouch"
           xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
-          android:versionCode="1"
-          android:versionName="1.0.0">
+          android:versionCode="2"
+          android:versionName="1.0.1">
 
     <!-- NETWORK PERMISSIONS -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -24,6 +24,9 @@
 
     <!-- required by JobIntentService -->
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
+
+    <!-- required by MessageSenderService for Pie -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
         tools:replace="android:label"
